--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -9,3 +9,12 @@
     <% end %>
   </ul>
 </div>
+
+<div>
+  <p>What is the longest word you can find?</p>
+  <form>
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+    <input type="text" name="word">
+    <input type="submit" value="Play">
+  </form>
+</div>
